# agentic_sentinel

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  authorization_to_test.md  environment_check.py  podman-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agentic_sentinel/: config.py  environment_check.py
agentic_sentinel/agents/: __init__.py  audit.py  base.py  demo_agent.py  hitl.py  types.py
architecture_decision_records/: ADR-001-agent-architecture.md
backend/: Dockerfile  main.py
dashboard/: Dockerfile  app.py
lab_targets/vulnerable_api/: main.py
tests/: conftest.py  test_agent_base.py  test_audit.py  test_hitl.py
week_01/day_01/: environment_check.py
