# pyproject.toml

[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "agentic-sentinel"
version     = "0.1.0"
description = "Agentic AI security pipeline for IoT/OT red team and blue team operations"
requires-python = ">=3.11"

dependencies = [
    "rich",
    "streamlit",
    "typer",
    "fastapi",
    "uvicorn",
    "sqlmodel",
    "chromadb",
    "httpx",
    "langchain",
    "langgraph",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "pre-commit",
]

[project.scripts]
# Week 3+: CLI entry points will be added here
# sentinel-scan = "agentic_sentinel.tools.scanner:app"

[tool.setuptools.packages.find]
# Tells setuptools to auto-discover agentic_sentinel/ and all sub-packages
where   = ["."]
include = ["agentic_sentinel*"]

[tool.ruff]
line-length    = 100
target-version = "py311"

# pyproject.toml — update [tool.ruff.lint] section only

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes (undefined names, unused imports)
    "W",    # pycodestyle warnings
    "I",    # isort (import ordering)
    "UP",   # pyupgrade (modernise Python syntax)
    "B",    # flake8-bugbear (common bug patterns)
    "S",    # flake8-bandit (basic security checks — catches hardcoded passwords)
]
ignore = [
    "S101",  # allow `assert` in test files (bandit flags it, want it in pytest)
    "E501",  # line too long — ruff format handles this; don't want double-enforcement
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106"]   # S106: hardcoded password — test fixtures use fake passwords

[tool.mypy]
python_version         = "3.12"
strict                 = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"            # no more per-test @pytest.mark.asyncio needed
testpaths    = ["tests"]
